--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,10 +1,8 @@
 <footer class="mt-auto py-3 text-center">
 
-  <small class="text-muted mb-2">
-    <i class="fas fa-code"></i> with <i class="fas fa-heart"></i>
-    by <strong>{{ site.author.name }}</strong>
-  </small>
-
+  <medium class="text-muted mb-2">
+    <i class="fas fa-code"></i> with <i class="fas fa-heart"></i> by <strong>neel_code</strong>
+  </medium>
   {% include social.html %}
 
 <!--  {%- assign theme_name = "portfolYOU" -%}-->
