--- a/_includes/landing.html
+++ b/_includes/landing.html
@@ -9,5 +9,7 @@
       </div>
     </div>
     <p class="text-muted wow animated slideInUp" data-wow-delay=".15s">{{ site.description }}</p>
+    <p class="text-muted wow animated slideInUp" data-wow-delay=".15s"> Love anything with RGB lighting, prefer cars over bikes.</p>
+    <p class="text-muted wow animated slideInUp" data-wow-delay=".15s"><a href="about"> Okay stalk me!</a> </p>
   </div>
 </div>
