Add | The second blog on the Big Data Series.

--- a/_includes/landing.html
+++ b/_includes/landing.html
@@ -1,15 +1,19 @@
 <div class="row justify-content-center align-items-center p-4">
-  <div class="col-lg-4 col-md-6 text-center mt-4">
+    <div class="col-lg-4 col-md-6 text-center mt-4">
 
-    <!-- Fine Circle Responsive Image -->
-    <div id="container" class="my-2">
-      <div id="dummy"></div>
-      <div id="element">
-        <img src="/assets/images/dp.jpeg" alt="{{ site.title }}" class="circle-image wow animated zoomIn" data-wow-delay=".1s">
-      </div>
+        <!-- Fine Circle Responsive Image -->
+        <div id="container" class="my-2">
+            <div id="dummy"></div>
+            <div id="element">
+                <img src="/assets/images/dp.jpeg" alt="{{ site.title }}" class="circle-image wow animated zoomIn"
+                     data-wow-delay=".1s">
+            </div>
+        </div>
+        <p class="text-muted wow animated slideInUp" data-wow-delay=".15s"> Code drives me, Caffeine completes me.</p>
+        <p class="text-muted wow animated slideInUp" data-wow-delay=".15s"> Loves anything with RGB lighting, prefers
+            cars over bikes.</p>
+
+        <p class="text-muted wow animated slideInUp" data-wow-delay=".15s"><a href="about"> Okay stalk me!</a></p>
+        <p class="text-muted wow animated slideInUp" data-wow-delay=".15s"><a href="blog"> Read my blogs.</a></p>
     </div>
-    <p class="text-muted wow animated slideInUp" data-wow-delay=".15s">{{ site.description }}</p>
-    <p class="text-muted wow animated slideInUp" data-wow-delay=".15s"> Love anything with RGB lighting, prefer cars over bikes.</p>
-    <p class="text-muted wow animated slideInUp" data-wow-delay=".15s"><a href="about"> Okay stalk me!</a> </p>
-  </div>
 </div>
